<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResCalc03Activity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="@string/ring1"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner1"
                    app:layout_constraintVertical_bias="1.0" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="339dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:prompt="@string/please_select"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:entries="@array/resistor_colour_code" />
            </android.support.constraint.ConstraintLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="@string/ring2"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner2"
                    app:layout_constraintVertical_bias="1.0" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="339dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:prompt="@string/please_select"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:entries="@array/resistor_colour_code" />
            </android.support.constraint.ConstraintLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="@string/ring3"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner3"
                    app:layout_constraintVertical_bias="1.0" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="339dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:spinnerMode="dialog"
                    android:prompt="@string/please_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:entries="@array/resistor_colour_code" />
            </android.support.constraint.ConstraintLayout>



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toTopOf="@+id/spinner4"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="1dp" />
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/ring_nmultipliakator4"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner4"
                    app:layout_constraintVertical_bias="1.0"/>

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="285dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:spinnerMode="dialog"
                    android:prompt="@string/please_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:entries="@array/resistor_colour_code" />

            </android.support.constraint.ConstraintLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/ring5"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner5"
                    app:layout_constraintVertical_bias="1.0" />

                <Spinner
                    android:id="@+id/spinner5"
                    android:layout_width="285dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:spinnerMode="dialog"
                    android:prompt="@string/please_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:entries="@array/resistor_colour_code" />
            </android.support.constraint.ConstraintLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/ring6"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner6"
                    app:layout_constraintVertical_bias="1.0" />

                <Spinner
                    android:id="@+id/spinner6"
                    android:layout_width="285dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:spinnerMode="dialog"
                    android:prompt="@string/please_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:entries="@array/resistor_colour_code" />
            </android.support.constraint.ConstraintLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="400dp"
                android:layout_height="59dp"
                android:text="@string/calc"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/resultViewResisted"
                android:layout_width="277dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/resistance"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/resultViewTolerance"
                android:layout_width="277dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/tolerance"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/resultViewTemperatureCoefficient"
                android:layout_width="277dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/ppm"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
        </TableRow>
    </TableLayout>




</android.support.constraint.ConstraintLayout>